<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarPerfil">

    <Button
        android:id="@+id/regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/regresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/foto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="153dp"
        android:contentDescription="@string/contentDescriptionImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/user"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="135dp"
        android:text="@string/labelCargarFoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/agregarfoto"
        android:layout_width="161dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="69dp"
        android:text="@string/labelTomarFoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="161dp"
        android:layout_height="49dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="69dp"
        android:text="@string/labelGuardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="379dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="105dp"
        android:ems="10"
        android:hint="@string/labelNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/descripcion"
        android:layout_width="379dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/labelDescripcion"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

</androidx.constraintlayout.widget.ConstraintLayout>